# log4cplus_gelf

./: .gitignore  CMakeLists.txt  LICENSE  README.md  azure-pipelines.yml  conanfile.py
.conan/: build.py
.conan/test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
include/log4cplus_gelf/: GelfAppender.h  library.h
src/: CMakeLists.txt  GelfAppender.cpp  UdpTransport.cpp  library.cpp
src/include/: AbstractTransport.h  TransportFactory.h  UdpTransport.h
test/: CMakeLists.txt  RunTests.cpp  TestGelfAppender.cpp  TestGelfAppenderRegistration.cpp  TestHello.cpp
